# battery

./: IMV-LSTM.ipynb  Model.py  README.en.md  README.md  main.py  npy查看.py  test.py  弛豫数据处理.py  弛豫末端电压.py  弛豫段绘图.py  弛豫电压提取到一行.py  批量提取统计特征.py  拼接所有特征.py  数据处理.py  数据提取.py  数据转置.py  文件合并.py  特征提取.py  相关性分析.py  突变二次校正.py  突变还原.py  自相关分析-统计特征.py  自相关分析.py  降采样.py
data/: battery_features_norm_10_1525.csv
test-7.3/: CycleNet.py  Cycletransformer.py  ImvLstm_predict.py  LSTM.py  Model.py  combine-predict.py  cyclenet-forcyclenum-mean.py  cyclenet-mdemension-gridsearch.py  cyclenet-mdemension.py  cyclenet-predict-gridsearch-1200x.py  cyclenet-predict-gridsearch-200x.py  cyclenet-predict-gridsearch-400x.py  cyclenet-predict-gridsearch-600x.py  cyclenet-predict-gridsearch.py  cyclenet-predict-norelaxtion.py  cyclenet-predict-singleinput.py  cyclenet-predict.py  cyclenet2.0-predict.py  cyclenet3.0-slidewindow.py  cyclenet3.1-noendV.py  cyclenet3.2-originalnet.py  cyclenet3.2.1-gridsearch.py  cyclenet3.3-forcyclenum.py  cyclenet3.3-origin-noEndV.py  cyclenet3.3.1-cn-forward150.py  cyclenet3.3.1.1-mean.py  cyclenet3.3.2-full-int.py  cyclenet3.3.3-optimis.py  cyclenet3.3.4-attention.py  cyclenet3.3.5-cnn.py  cyclenet3.3.6-HuberLoss.py  cyclenet3.3.7-nocycle1.py  exp-net-predict.py  exp_net.py  imv_lstm_net.py  kalman_fusion.py  (+3 more)
二号小论文/: .gitignore  README.md  pyproject.toml
二号小论文/data/: your_file.txt
二号小论文/src/your_dl_project/: __init__.py  __main__.py  core.py  data_processing.py  dataset.py  evaluate.py  model.py  predict.py  train.py
二号小论文/tests/: test_data_pipeline.py
(+129 files in other folders)
